# VecDrawasm

./: Cargo.toml  README.md  index.html
src/: generate_pdf.rs  hytos.rs  lib.rs  request.rs  schema.rs  shape.rs  state.rs  undo_redo_manager.rs  vec_draw_doc.rs
src/shapes/: cubic_bez.rs  ellipse.rs  elliptical_arc.rs  geometry.rs  line.rs  pencil.rs  polyline.rs  rectangle.rs  shape.rs  svg.rs  text_box.rs
styles/: index.css
ui/: app-window.slint  main.slint
