[package]
name = "vector_drawing_webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4.26"
console_log = "1.0.0"
svgtypes = "0.15.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"
once_cell = "1.20.3"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.77"
features = ["Window", "Document", "HtmlCanvasElement", "HtmlElement", "HtmlTextAreaElement", "HtmlInputElement", "HtmlImageElement", "InputEvent", "MouseEvent", "WheelEvent", "KeyboardEvent", "CanvasGradient"
, "CanvasRenderingContext2d", "DomRect", "DragEvent", "DataTransfer", "FileReader", "HtmlDivElement", "Path2d", "Element", "DomParser", "SupportedType", "Node", "NodeList"
, "CssStyleDeclaration", "HtmlCollection", "HtmlStyleElement", "Event", "File", "FileList", "ImageData", "CompositionEvent", "TextMetrics"]

[profile.dev]
debug = true