[package]
name = "vector_drawing_webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4.26"
console_log = "1.0.0"
svgtypes = "0.15.3"
js-sys = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"
once_cell = "1.20.3"

# Piet (벡터 그래픽 라이브러리)를 사용하기 위해 추가한 라이브러리
piet = "0.7.0"
piet-web = "0.7.0"

# Kurbo(Piet에서 사용하는 기하학적 도형)
kurbo = "0.11.1"

svg2pdf = "0.12.0"

# 컴파일 이슈때문에 버전 고정
rand = {version =  "0.8", features = ["getrandom"]}
getrandom = { version = "0.2", features = ["js"] }

wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.77"
features = ["Window", "Document", "HtmlCanvasElement", "HtmlElement", "HtmlTextAreaElement", "HtmlInputElement", "HtmlImageElement", "InputEvent", "MouseEvent", "WheelEvent", "KeyboardEvent", "CanvasGradient"
, "CanvasRenderingContext2d", "DomRect", "DragEvent", "DataTransfer", "FileReader", "HtmlDivElement", "Path2d", "Element", "DomParser", "SupportedType", "Node", "NodeList"
, "CssStyleDeclaration", "HtmlCollection", "HtmlStyleElement", "Event", "File", "FileList", "ImageData", "CompositionEvent", "TextMetrics", 
"Url", "HtmlAnchorElement", "BlobPropertyBag", "Request", "RequestInit", "RequestMode", "Response", "Headers"]

[profile.dev]
debug = true